<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.shock.saturdaylifestyle.ui.loginRegister.viewModel.LoginRegisterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/_12sdp"
        android:paddingTop="@dimen/_16sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:onClick="@{()->viewModel.onBackPressed()}"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />








        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_semibold"
            android:gravity="center"
            android:text="@string/confirm_your_number"
            android:textAllCaps="true"
            android:textColor="@color/text_color_primary_black"
            android:textSize="@dimen/_26ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back" />




        <TextView
            android:id="@+id/tv_subtitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/please_complete_the_last_4_digits"
            android:textColor="@color/text_color_primary_black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_phoneno3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text=""
            android:textColor="@color/text_color_primary_black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle3" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_pin3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:layout_marginTop="@dimen/_35sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phoneno3" >



            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/_121_1345"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/text_color_primary_black"
                android:textSize="@dimen/_24ssp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/pv_pin3"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"/>



            <com.chaos.view.PinView
                android:id="@+id/pv_pin3"
                android:layout_width="wrap_content"
                app:lineColor="@color/text_color_primary_black"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:inputType="number"
                android:itemBackground="@drawable/bg_pin_default"
                android:textColor="@color/text_color_primary_black"
                android:background="@color/fui_transparent"
                android:maxLength="4"
                app:itemWidth="@dimen/_28sdp"
                app:lineWidth="@dimen/_1sdp"
                android:textSize="@dimen/_40ssp"
                app:cursorColor="@color/text_color_primary_black"
                app:cursorWidth="@dimen/_1sdp"
                app:hideLineWhenFilled="false"
                app:itemCount="4"
                app:itemRadius="@dimen/_7sdp"
                app:itemSpacing="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_phone"
                app:viewType="none" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView
            android:id="@+id/tv_wrong_number3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/wrong_number_please_input_the_correct_code"
            android:textColor="@color/alert_red"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_pin3" />




        <TextView
            android:id="@+id/tv_didnt_get_the_code3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/didn_t_get_the_missed_call"
            android:textColor="@color/text_color_primary_black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_wrong_number3" />





        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_try_again3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/try_again"
            android:visibility="visible"
            android:textColor="@color/indigo"
            android:textAllCaps="true"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_didnt_get_the_code3" />



        <TextView
            android:id="@+id/tv_by_signing_up3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/by_signing_up_you_agree_to_our"
            android:textColor="@color/text_color_primary_black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_privacy_policy3"/>




        <TextView
            android:id="@+id/tv_privacy_policy3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/privacy_policy_text_underlined"
            android:textColor="@color/indigo"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>






    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>