<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data class="OTPActivityDataBinding">

        <variable
            name="callback"
            type="com.shock.saturdaylifestyle.ui.login_register.callbacks.OTPActivityViewCallBacks" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:background="@color/white">




<ImageView
    android:id="@+id/iv_back"
    android:layout_width="@dimen/_20sdp"
    android:layout_height="@dimen/_20sdp"
    android:paddingBottom="@dimen/_2sdp"
    android:src="@drawable/ic_arrow_back"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>



                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oswald_semibold"
                    android:gravity="center"
                    android:text="@string/confirm_your_number"
                    android:textAllCaps="true"
                    android:textColor="@color/text_color_primary_black"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_back" />




             <TextView
                 android:id="@+id/tv_subtitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_regular"
                 android:gravity="center"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:text="@string/insert_the_5_digit_code_text"
                 android:textColor="@color/text_color_primary_black"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_title" />




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle" >


            <com.chaos.view.PinView
                android:id="@+id/pv_pin"
                android:layout_width="wrap_content"
                app:lineColor="@color/text_color_primary_black"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:inputType="number"
                android:itemBackground="@drawable/bg_pin_default"
                android:textColor="@color/text_color_primary_black"
                android:background="@color/fui_transparent"
                android:maxLength="5"
                app:itemWidth="@dimen/_40sdp"
                app:lineWidth="1dp"
                android:textSize="40sp"
                app:cursorColor="@color/text_color_primary_black"
                app:cursorWidth="@dimen/_1sdp"
                app:hideLineWhenFilled="false"
                app:itemCount="5"
                app:itemRadius="@dimen/_7sdp"
                app:itemSpacing="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:viewType="none" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView
            android:id="@+id/tv_wrong_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/wrong_number_please_input_the_correct_code"
            android:textColor="@color/alert_red"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_pin" />




        <TextView
            android:id="@+id/tv_didnt_get_the_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/didn_t_get_the_5_digit_code"
            android:textColor="@color/text_color_primary_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_wrong_number" />





        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/try_again_in_30"
            android:textColor="@color/text_color_hint"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_didnt_get_the_code" />



        <TextView
            android:id="@+id/tv_try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="Try Again"
            android:visibility="gone"
            android:textColor="@color/indigo"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_didnt_get_the_code" />



        <TextView
            android:id="@+id/tv_by_signing_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="By signing up you agree to our"
            android:textColor="@color/text_color_primary_black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_privacy_policy"/>




        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/privacy_policy_text_underlined"
            android:textColor="@color/indigo"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>









    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
